;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.4 relative to sbcl-0.9.3:
  * enhancement: SBCL on MIPS platforms now has a much larger dynamic
    space for its heap.  (thanks to Thiemo Seufer)
  * minor incompatible change: eof selects abort in the debugger.
  * minor incompatible change: *INVOKE-DEBUGGER-HOOK* is run before
    *DEBUGGER-HOOK* => *DEBUGGER-HOOK* is not run when the debugger
    is disabled.
  * minor incompatible change: SB-KERNEL:INSTANCE-LAMBDA is
    deprecated, and will go away in a future revision of SBCL.
  * minor incompatible change: GC-ON and GC-OFF are no longer
    implemented with a counter, it does not matter how many times gc
    is switched on or off
  * bug fix: discriminating functions for generic function classes
    with non-standard methods for COMPUTE-APPLICABLE-METHODS no longer
    make invalid assumptions about method precedence order.  (reported
    by Bruno Haible)
  * bug fix: degree sign (<U00B0>) could not be encoded in KOI8-R.
  * bug fix: correct pathname printing with printer escaping is on.
    (thanks to Kevin Reid)
  * bug fix: complex VOP definitions in "user-space" no longer trigger
    package locks.  (reported by Zach Beane)
  * fixed bug 343: SB-KERNEL:INSTANCE-LAMBDA is no longer necessary
    for funcallable-instance functions, and is no different from
    regular LAMBDA.
  * bug fix: PARSE-INTEGER no longer depends on the whitespaceness of
    characters in the current readtable.  (reported by Nicholas Neuss)
  * bug fix: SUBTYPEP on various CONS types returns more a more
    accurate acknowledgment of its certainty.
  * optimizations: REMOVE-DUPLICATES now runs in linear time on
    lists in some cases.  This partially fixes bug 384.
  * flush all standard streams before prompting in the REPL and the
    debugger.
  * bug fix: signal handling and triggering gc do not conflict
    directly anymore, in particular a high frequency sb-sprof does
    not prevent gc from running
  * threads